feat: connect project members to existing accounts